--- a/index.html
+++ b/index.html
@@ -25,8 +25,39 @@
     </header>
     <button type="button">Order Service</button>
     <main>
+      <a href="./index.htlm">
+        <img
+          src="./images/dark-bg.svg"
+          alt="Dark background"
       <h1>Effective Solutions for Your Business</h1>
       <section></section>
+        </ul>
+      </section>
+      <a href="index.html"
+        ><img
+          src="./images/light-bg.svg"
+          alt="Light background"
+          width="1440"
+          height="732"
+        />
+      </a>
     </main>
   </body>
+  <footer>
+    <a href="./index.html">
+      <img src="./images/logo.svg" alt="Site logo" />
+    </a>
+    <p>
+      Increase the flow of customers and sales for your business with digital
+      marketing & growth solutions.
+    </p>
+    <a href="index.html">
+      <img
+        src="./images/dark-bg.svg"
+        alt="Dark background"
+        width="1440"
+        height="600"
+      />
+    </a>
+  </footer>
 </html>
