--- a/index.html
+++ b/index.html
@@ -8,29 +8,119 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">
-        <img src="./images/logo.svg" alt="Site logo" />
-      </a>
+      <a href="./index.html"><img src="./images/logo.svg" alt="Site logo" /></a>
+      <nav>
+        <ul>
+          <li><h2>Studio</h2></li>
+          <li><h2>Portfolio</h2></li>
+          <li><h2>Contacts</h2></li>
+        </ul>
+      </nav>
       <ul>
-        <nav>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
-        </nav>
-      </ul>
-      <ul>
-        <a href="mailto:">info@devstudio.com </a>
-        <a href="tel +110001111111">+11 (000) 111-11-11</a>
+        <li><a href="mailto:">info@devstudio.com </a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
     <button type="button">Order Service</button>
     <main>
       <a href="./index.htlm">
-        <img
-          src="./images/dark-bg.svg"
-          alt="Dark background"
+        <img src="./images/dark-bg.svg" alt="Dark background" width="1440" />
+      </a>
       <h1>Effective Solutions for Your Business</h1>
-      <section></section>
+      <section>
+        <h3>Strategy</h3>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
+        <h3>Punctuality</h3>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
+        <h3>Diligence</h3>
+        <p>
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+        </p>
+        <h3>Technologies</h3>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/monitor.jpg"
+              alt="A picture on the monitor's screenS"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/mobile telephones.jpg"
+              alt="4 mobile telephones"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/laptop i mobile telephone.jpg"
+              alt="Synchronized work of laptop and mobile telephone"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/mark.jpg"
+              alt="A man with shirt haircut"
+              width="264"
+              height="260"
+            />
+          </li>
+          <p>Mark Guerrero</p>
+          <p>Product Designer</p>
+          <li>
+            <img
+              src="./images/tom.jpg"
+              alt="A red man"
+              width="264"
+              height="260"
+            />
+          </li>
+          <p>Tom Ford</p>
+          <p>Frontend Developer</p>
+          <li>
+            <img
+              src="./images/camila.jpg"
+              alt="A women with long hair"
+              width="264"
+              height="260"
+            />
+          </li>
+          <p>Camila Garcia</p>
+          <p>Marketing</p>
+          <li>
+            <img
+              src="./images/daniel .jpg"
+              alt="A man in a t-shirt"
+              width="264"
+              height="260"
+            />
+          </li>
+          <p>Daniel Wilson</p>
+          <p>UI Designer</p>
         </ul>
       </section>
       <a href="index.html"
@@ -52,12 +142,7 @@
       marketing & growth solutions.
     </p>
     <a href="index.html">
-      <img
-        src="./images/dark-bg.svg"
-        alt="Dark background"
-        width="1440"
-        height="600"
-      />
+      <img src="./images/dark-bg.svg" alt="Dark background" width="1440" />
     </a>
   </footer>
 </html>
