--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
         <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
-    <button type="button">Order Service</button>
     <main>
-      <a href="./index.htlm">
-        <img src="./images/dark-bg.svg" alt="Dark background" width="1440" />
-      </a>
+      <button type="button">Order Service</button>
       <h1>Effective Solutions for Your Business</h1>
       <section>
         <h3>Strategy</h3>
@@ -70,7 +67,7 @@
           </li>
           <li>
             <img
-              src="./images/laptop i mobile telephone.jpg"
+              src="./images/laptop and mobile telephone.jpg"
               alt="Synchronized work of laptop and mobile telephone"
               width="360"
               height="300"
@@ -89,8 +86,8 @@
               height="260"
             />
           </li>
-          <p>Mark Guerrero</p>
-          <p>Product Designer</p>
+          <li><p>Mark Guerrero</p></li>
+          <li><p>Product Designer</p></li>
           <li>
             <img
               src="./images/tom.jpg"
@@ -99,8 +96,8 @@
               height="260"
             />
           </li>
-          <p>Tom Ford</p>
-          <p>Frontend Developer</p>
+          <li><p>Tom Ford</p></li>
+          <li><p>Frontend Developer</p></li>
           <li>
             <img
               src="./images/camila.jpg"
@@ -109,28 +106,20 @@
               height="260"
             />
           </li>
-          <p>Camila Garcia</p>
-          <p>Marketing</p>
+          <li><p>Camila Garcia</p></li>
+          <li><p>Marketing</p></li>
           <li>
             <img
-              src="./images/daniel .jpg"
+              src="./images/daniel.jpg"
               alt="A man in a t-shirt"
               width="264"
               height="260"
             />
           </li>
-          <p>Daniel Wilson</p>
-          <p>UI Designer</p>
+          <li><p>Daniel Wilson</p></li>
+          <li><p>UI Designer</p></li>
         </ul>
       </section>
-      <a href="index.html"
-        ><img
-          src="./images/light-bg.svg"
-          alt="Light background"
-          width="1440"
-          height="732"
-        />
-      </a>
     </main>
   </body>
   <footer>
@@ -141,8 +130,5 @@
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
     </p>
-    <a href="index.html">
-      <img src="./images/dark-bg.svg" alt="Dark background" width="1440" />
-    </a>
   </footer>
 </html>
