finish re-revised

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li>
             <img
               src="./images/mobile telephones.jpg"
-              alt="4 mobile telephones"
+              alt="Four mobile telephones"
               width="360"
               height="300"
             />
