--- a/index.html
+++ b/index.html
@@ -49,72 +49,37 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li>
-            <img
-              src="./images/monitor.jpg"
-              alt="A picture on the monitor's screenS"
-              width="360"
-              height="300"
-            />
+          <li><img src="./images/monitor.jpg" alt="A picture on the monitor's screenS"
+              width="360" height="300"/>
           </li>
-          <li>
-            <img
-              src="./images/mobile telephones.jpg"
-              alt="Four mobile telephones"
-              width="360"
-              height="300"
-            />
+          <li><img src="./images/mobile telephones.jpg" alt="Four mobile telephones"
+              width="360" height="300"/>
           </li>
-          <li>
-            <img
-              src="./images/laptop and mobile telephone.jpg"
-              alt="Synchronized work of laptop and mobile telephone"
-              width="360"
-              height="300"
-            />
+          <li><img src="./images/laptop and mobile telephone.jpg" alt="Synchronized work of laptop and mobile telephone"
+              width="360" height="300"/>
           </li>
         </ul>
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
-          <li>
-            <img
-              src="./images/mark.jpg"
-              alt="A man with shirt haircut"
-              width="264"
-              height="260"
-            />
+          <li><img src="./images/mark.jpg" alt="A man with shirt haircut"
+              width="264" height="260"/>
           </li>
           <li><p>Mark Guerrero</p></li>
           <li><p>Product Designer</p></li>
-          <li>
-            <img
-              src="./images/tom.jpg"
-              alt="A red man"
-              width="264"
-              height="260"
-            />
+          <li><img src="./images/tom.jpg" alt="A red man"
+              width="264" height="260"/>
           </li>
           <li><p>Tom Ford</p></li>
           <li><p>Frontend Developer</p></li>
-          <li>
-            <img
-              src="./images/camila.jpg"
-              alt="A women with long hair"
-              width="264"
-              height="260"
-            />
+          <li><img src="./images/camila.jpg" alt="A women with long hair"
+              width="264" height="260"/>
           </li>
           <li><p>Camila Garcia</p></li>
           <li><p>Marketing</p></li>
-          <li>
-            <img
-              src="./images/daniel.jpg"
-              alt="A man in a t-shirt"
-              width="264"
-              height="260"
-            />
+          <li><img src="./images/daniel.jpg" alt="A man in a t-shirt"
+              width="264" height="260"/>
           </li>
           <li><p>Daniel Wilson</p></li>
           <li><p>UI Designer</p></li>
@@ -122,8 +87,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">
-        <img src="./images/logo.svg" alt="Site logo" />
+      <a href="./index.html"><img src="./images/logo.svg" alt="Site logo"/>
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
