--- a/index.html
+++ b/index.html
@@ -8,86 +8,80 @@
   </head>
   <body>
     <header>
-      <a href="./index.html"><img src="./images/logo.svg" alt="Site logo" /></a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><h2>Studio</h2></li>
-          <li><h2>Portfolio</h2></li>
-          <li><h2>Contacts</h2></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
+      <address>
+        <ul>
         <li><a href="mailto:">info@devstudio.com </a></li>
         <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+        </ul>
+      </address>
     </header>
     <main>
-      <button type="button">Order Service</button>
-      <h1>Effective Solutions for Your Business</h1>
       <section>
-        <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+        
+      </section>
+      <section>
+        <h2>Our credo</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+          </li>
+          <li><h3>Punctuality</h3>
+              <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+          </li>
+          <li><h3>Diligence</h3>
+              <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+          </li>
+          <li><h3>Technologies</h3>
+              <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./images/monitor.jpg" alt="A picture on the monitor's screenS"
-              width="360" height="300"/>
+          <li><img src="./images/monitor.jpg" alt="A picture on the monitor's screenS" width="360" height="300">
           </li>
-          <li><img src="./images/mobile telephones.jpg" alt="Four mobile telephones"
-              width="360" height="300"/>
+          <li><img src="./images/mobile telephones.jpg" alt="Four mobile telephones" width="360" height="300"/>
           </li>
-          <li><img src="./images/laptop and mobile telephone.jpg" alt="Synchronized work of laptop and mobile telephone"
-              width="360" height="300"/>
+          <li><img src="./images/laptop and mobile telephone.jpg" alt="Synchronized work of laptop and mobile telephone" width="360" height="300">
           </li>
         </ul>
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
-          <li><img src="./images/mark.jpg" alt="A man with shirt haircut"
-              width="264" height="260"/>
+          <li><img src="./images/mark.jpg" alt="A man with shirt haircut" width="264" height="260">
+              <h3>Mark Guerrero</h3>
+              <p>Product Designer</p>
           </li>
-          <li><p>Mark Guerrero</p></li>
-          <li><p>Product Designer</p></li>
-          <li><img src="./images/tom.jpg" alt="A red man"
-              width="264" height="260"/>
+          <li><img src="./images/tom.jpg" alt="A red man" width="264" height="260">
+              <h3>Tom Ford</h3>
+              <p>Frontend Developer</p>
           </li>
-          <li><p>Tom Ford</p></li>
-          <li><p>Frontend Developer</p></li>
-          <li><img src="./images/camila.jpg" alt="A women with long hair"
-              width="264" height="260"/>
+          <li><img src="./images/camila.jpg" alt="A women with long hair" width="264" height="260">
+              <h3>Camila Garcia</h3>
+              <p>Marketing</p>
           </li>
-          <li><p>Camila Garcia</p></li>
-          <li><p>Marketing</p></li>
-          <li><img src="./images/daniel.jpg" alt="A man in a t-shirt"
-              width="264" height="260"/>
+          <li><img src="./images/daniel.jpg" alt="A man in a t-shirt" width="264" height="260">
+              <h3>Daniel Wilson</h3>
+              <p>UI Designer</p>
           </li>
-          <li><p>Daniel Wilson</p></li>
-          <li><p>UI Designer</p></li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="./index.html"><img src="./images/logo.svg" alt="Site logo"/>
+      <a href="./index.html">WebStudio</a>
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
