--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=, initial-scale=1.0"/>
     <title>Effective Solutions for Your Business</title>
   </head>
   <body>
@@ -50,11 +50,11 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./images/monitor.jpg" alt="A picture on the monitor's screenS" width="360" height="300">
+          <li><img src="./images/monitor.jpg"alt="A picture on the monitor's screenS"width="360"height="300">
           </li>
-          <li><img src="./images/mobile telephones.jpg" alt="Four mobile telephones" width="360" height="300"/>
+          <li><img src="./images/mobile telephones.jpg"alt="Four mobile telephones"width="360"height="300">
           </li>
-          <li><img src="./images/laptop and mobile telephone.jpg" alt="Synchronized work of laptop and mobile telephone" width="360" height="300">
+          <li><img src="./images/laptop and mobile telephone.jpg"alt="Synchronized work of laptop and mobile telephone"width="360"height="300">
           </li>
         </ul>
       </section>
