--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./images/monitor.jpg"alt="A picture on the monitor's screenS"width="360"height="300">
+          <li><img src="./images/monitor.jpg" alt="A picture on the monitor's screenS" width="360" height="300">
           </li>
-          <li><img src="./images/mobile telephones.jpg"alt="Four mobile telephones"width="360"height="300">
+          <li><img src="./images/mobile telephones.jpg" alt="Four mobile telephones" width="360" height="300">
           </li>
-          <li><img src="./images/laptop and mobile telephone.jpg"alt="Synchronized work of laptop and mobile telephone"width="360"height="300">
+          <li><img src="./images/laptop and mobile telephone.jpg" alt="Synchronized work of laptop and mobile telephone" width="360" height="300">
           </li>
         </ul>
       </section>
@@ -80,13 +80,9 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      </a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+  <footer>
+    <a href="./index.html">WebStudio</a>
+    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+  </footer>
   </body>
 </html>
