--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <ul>
           <li><img src="./images/monitor.jpg" alt="A picture on the monitor's screenS" width="360" height="300">
           </li>
-          <li><img src="./images/mobile telephones.jpg" alt="Four mobile telephones" width="360" height="300">
+          <li><img src="./images/mobiletelephones.jpg" alt="Four mobiletelephones" width="360" height="300">
           </li>
-          <li><img src="./images/laptop and mobile telephone.jpg" alt="Synchronized work of laptop and mobile telephone" width="360" height="300">
+          <li><img src="./images/laptop and mobiletelephone.jpg" alt="Synchronized work of a laptop and a mobiletelephone" width="360" height="300">
           </li>
         </ul>
       </section>
