--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </li>
           <li><img src="./images/cellphones.jpg" alt="Four cellphones" width="360" height="300">
           </li>
-          <li><img src="./images/notebook and cellphone.jpg" alt="Synchronized work of a notebook and a cellphone" width="360" height="300">
+          <li><img src="./images/notebook%20and%20cellphone.jpg" alt="Synchronized work of a notebook and a cellphone" width="360" height="300">
           </li>
         </ul>
       </section>
